<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:id="@+id/fragment2_tooblar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent ="10%"
        android:background="@color/fragment_tooblar"
        >
        <TextView
            android:id="@+id/fragment2_text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/fragment2_text1"
            android:gravity="center"
            android:textColor="@color/buttom_back"
            />
    </RelativeLayout>
    <android.support.percent.PercentRelativeLayout
        android:id="@+id/fragment2_relative1"
        android:layout_below="@id/fragment2_tooblar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/fragment2_linear1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent ="17.5%"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:id="@+id/fragment2_linear11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                >
               <ImageView
                   android:src="@drawable/fragment2_img1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:contentDescription="@string/fragment2_text1" />
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment2_text2"
                        android:textColor="@color/fragment2_text1"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment2_text3"
                        android:textColor="@color/fragment2_text2"
                        android:textSize="10sp"
                        />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment2_linear12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <ImageView
                    android:src="@drawable/fragment2_img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/fragment2_text1" />
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment2_text4"
                        android:textColor="@color/fragment2_text1"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment2_text5"
                        android:textColor="@color/fragment2_text2"
                        android:textSize="10sp"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <View
            android:id="@+id/fragment_view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/fragment2_text2"
            android:layout_below="@id/fragment2_linear1"
            />
        <LinearLayout
            android:id="@+id/fragment2_linear2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_heightPercent ="17.5%"
            android:orientation="horizontal"
            android:layout_below="@id/fragment2_linear1"
            android:gravity="center"
            >
            <LinearLayout
                android:id="@+id/fragment2_linear21"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:src="@drawable/fragment2_img3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/fragment2_text6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/fragment2_linear22"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:src="@drawable/fragment2_img4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/fragment2_text7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/fragment2_linear23"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:src="@drawable/fragment2_img5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/fragment2_text8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/fragment2_linear24"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:src="@drawable/fragment2_img6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/fragment2_text9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/fragment2_linear3"
            android:layout_below="@id/fragment2_linear2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/fragment2_back"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/fragment2_text10"
                android:gravity="center"
                android:textSize="12sp"
                android:paddingLeft="15dp"
                android:textColor="@color/fragment2_text1"
                />
            <ListView
                android:id="@+id/fragment2_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/fragment2_text1"
                android:dividerHeight="0.5dp"
                >

            </ListView>

        </LinearLayout>

    </android.support.percent.PercentRelativeLayout>


</android.support.percent.PercentRelativeLayout>
