<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment2_back"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/fragment_tooblar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="20dp"
            android:src="@drawable/bank" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/set_text1"
            android:textColor="@color/buttom_back"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/set_keep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:background="@color/buttom_back"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/set_text2"
            android:textColor="@color/fragment_tooblar"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/set_layout_head"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/buttom_back"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/set_text3" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/set_head"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="center"
                app:riv_corner_radius="100dip"
                app:riv_border_width="3dp"
                app:riv_border_color="#ffffff"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/set_layout_username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/buttom_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/set_text4" />

            <EditText
                android:id="@+id/set_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="end"
                android:textColor="@color/fragment2_text2"
                android:textSize="14sp"
                android:text="" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/set_layout_nicheng"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/set_text5" />

            <EditText
                android:id="@+id/set_nicheng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="end"
                android:textColor="@color/fragment2_text2"
                android:textSize="14sp"
                android:text="" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/set_layout_sex"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/set_text6" />

            <RadioGroup
                android:id="@+id/set_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/set_sex_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_text5.1"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/set_sex_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_text5.2"
                    android:textSize="12sp" />
            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/set_layout_age"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/set_text7" />

            <EditText
                android:id="@+id/set_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:textColor="@color/fragment2_text2"
                android:textSize="14sp"
                android:gravity="end"
                android:text="" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/set_layout_address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/set_text8" />

            <EditText
                android:id="@+id/set_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="end"
                android:textColor="@color/fragment2_text2"
                android:textSize="14sp"
                android:text="" />
        </RelativeLayout>

        <Button
            android:id="@+id/set_back"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@drawable/register_button"
            android:text="@string/set_text9"
            android:textColor="@color/buttom_back" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </LinearLayout>
</LinearLayout>
