<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.example.administrator.beijingplayer.RegisterActivity">
    <RelativeLayout
        android:id="@+id/login_layout1"
        android:background="@color/fragment_tooblar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/login_img1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@drawable/bank"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text1"
            android:textColor="@color/buttom_back"
            android:gravity="center"
            android:padding="10dp"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/login_img2"
        android:layout_below="@id/login_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:src="@mipmap/ic_launcher"
        />
    <LinearLayout
        android:background="#ffffff"
        android:layout_below="@id/login_img2"
        android:id="@+id/login_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        >
        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:layout_alignParentBottom="true"
                android:id="@+id/login_img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_username"
                android:paddingBottom="15dp"
                />
            <EditText
                android:paddingLeft="20dp"
                android:paddingBottom="20dp"
                android:layout_alignParentBottom="true"
                android:id="@+id/login_edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-8dp"
                android:hint="@string/login_text1"
                />

        </RelativeLayout>

        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:layout_alignParentBottom="true"
                android:id="@+id/login_img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_password"
                android:paddingBottom="15dp"
                />
            <EditText
                android:paddingLeft="20dp"
                android:paddingBottom="20dp"
                android:layout_alignParentBottom="true"
                android:id="@+id/login_edit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-8dp"
                android:hint="@string/login_text2"
                android:inputType="textPassword"
                />

        </RelativeLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_layout3"
        android:layout_below="@id/login_layout2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_below="@id/login_layout2"
            android:id="@+id/login_img6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_xieyi1"
            />
        <TextView
            android:layout_marginLeft="5dp"
            android:id="@+id/login_text1"
            android:layout_below="@id/login_layout2"
            android:layout_toRightOf="@id/login_img6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text3"
            />
        <TextView
            android:id="@+id/login_text2"
            android:layout_below="@id/login_layout2"
            android:layout_toRightOf="@id/login_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text4"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/login_btn1"
        android:layout_marginTop="20dp"
        android:layout_below="@id/login_layout3"
        android:background="@drawable/register_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_text5"
        android:textColor="@color/buttom_back"
        android:layout_marginLeft="30dp"
        />
    <Button
        android:id="@+id/login_btn2"
        android:layout_marginTop="20dp"
        android:layout_below="@id/login_btn1"
        android:background="@drawable/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_text6"
        android:textColor="@color/fragment_tooblar"
        android:layout_marginLeft="30dp"
        />

</RelativeLayout>
